--- a/docs/modules/trino/pages/usage-guide/operations/pod-disruptions.adoc
+++ b/docs/modules/trino/pages/usage-guide/operations/pod-disruptions.adoc
@@ -47,8 +47,8 @@ This results e.g. in the following numbers:
 |===
 
 == Reduce rolling redeployment durations
-The default PDBs of the operator are pessimistic and will cause the rolling redeployment to take a considerable amount of time.
-As an example, in a cluster with 100 workers, 10 workers are restarted at the same time. Assuming a worker takes 5 minutes to properly restart, the whole redeployment will take (100 nodes / 10 nodes simultaneous * 5 minutest = ) 50 minutes.
+The default PDBs of the operator are pessimistic and cause the rolling redeployment to take a considerable amount of time.
+As an example, in a cluster with 100 workers, 10 workers are restarted at the same time. Assuming a worker takes 5 minutes to properly restart, the whole redeployment takes (100 nodes / 10 nodes simultaneous * 5 minutest = ) 50 minutes.
 
 You can use the following measures to speed this up:
 
