docs: Fix typo in catalog name blackhole -> backHole

--- a/docs/modules/trino/pages/usage-guide/catalogs/black-hole.adoc
+++ b/docs/modules/trino/pages/usage-guide/catalogs/black-hole.adoc
@@ -16,7 +16,7 @@ metadata:
     trino: simple-trino
 spec:
   connector:
-    blackhole: {} # No options needed
+    blackHole: {} # No options needed
 ----
 
 [NOTE]
