Feat: Trino Listener Integration (#753)
* add listener to roles

* wip - adapt role and rolegroup access

* remove unused error

* fmt

* fix tests

* fmt

* regenerated charts

* add docs

* wip - working

* make headless service name a function

* added tests

* adapted changelog

* move scripts to commons folder, fix tests

* new lines

* fix tls test

* fix authentication test

* fix opa test

* attempt to fix

* adapt getting started to listener

* use role level listener

* add lost comment

* fix listener examples / comments

* Apply suggestions from code review

Co-authored-by: Nick <10092581+NickLarsenNZ@users.noreply.github.com>

* clippy

* fix smoke test

* fix tls test

* fix authorization test

* regenerate charts

* fix metrics test for lsitener changes

* fix test

* Update rust/operator-binary/src/crd/mod.rs

Co-authored-by: Nick <10092581+NickLarsenNZ@users.noreply.github.com>

* Update rust/operator-binary/src/crd/mod.rs

Co-authored-by: Nick <10092581+NickLarsenNZ@users.noreply.github.com>

* fmt

* fix app version

* remove merge artifact

* adapt readme for smoke aws test

* move rolegroup_metrics_service_name out of cluster impl

* typo

---------

Co-authored-by: Nick <10092581+NickLarsenNZ@users.noreply.github.com>

--- a/docs/modules/trino/pages/usage-guide/listenerclass.adoc
+++ b/docs/modules/trino/pages/usage-guide/listenerclass.adoc
@@ -1,17 +1,18 @@
 = Service exposition with ListenerClasses
+:description: Configure Trino service exposure with ListenerClasses: cluster-internal, external-unstable, or external-stable.
 
-Trino offers a web UI and an API, both are exposed by the `connector` xref:concepts:roles-and-role-groups.adoc[role].
-The Operator deploys a service called `<name>-connector` (where `<name>` is the name of the TrinoCluster) through which Trino can be reached.
-
-This service can have three different types: `cluster-internal`, `external-unstable` and `external-stable`.
-Read more about the types in the xref:concepts:service-exposition.adoc[service exposition] documentation at platform level.
-
-This is how the ListenerClass is configured:
+The operator deploys a xref:listener-operator:listener.adoc[Listener] for the coodinator pod.
+The listener defaults to only being accessible from within the Kubernetes cluster, but this can be changed by setting `.spec.coordinators.roleConfig.listenerClass`:
 
 [source,yaml]
 ----
 spec:
-  clusterConfig:
-    listenerClass: cluster-internal  # <1>
+  coordinators:
+    roleConfig:
+      listenerClass: external-unstable  # <1>
+    ...
+  workers:
+    ...
 ----
-<1> The default `cluster-internal` setting.
+<1> Specify a ListenerClass, such as `external-stable`, `external-unstable`, or `cluster-internal` (the default setting is `cluster-internal`).
+This can be set only for the coordinator role.
