--- a/docs/modules/trino/pages/usage-guide/configuration.adoc
+++ b/docs/modules/trino/pages/usage-guide/configuration.adoc
@@ -108,36 +108,7 @@ workers:
 
 Here too, overriding properties such as `http-server.https.port` will lead to broken installations.
 
-== Resources
-
-=== Storage for data volumes
-
-You can mount a volume where data (config and logs of Trino) is stored by specifying https://kubernetes.io/docs/concepts/storage/persistent-volumes[PersistentVolumeClaims] for each individual role or role group:
-
-[source,yaml]
-----
-workers:
-  config:
-    resources:
-      storage:
-        data:
-          capacity: 2Gi
-  roleGroups:
-    default:
-      config:
-        resources:
-          storage:
-            data:
-              capacity: 3Gi
-----
-
-In the above example, all Trino workers in the default group store data (the location of the property `--data-dir`) on a `3Gi` volume.
-Additional role groups not specifying any resources inherit the config provided on the role level (`2Gi` volume).
-This works the same for memory or CPU requests.
-
-By default, in case nothing is configured in the custom resource for a certain role group, each Pod has a `2Gi` large local volume mount for the data location containing mainly logs.
-
-=== Resource Requests
+== Resource Requests
 
 include::home:concepts:stackable_resource_requests.adoc[]
 
@@ -161,9 +132,6 @@ spec:
           max: '2000m'
         memory:
           limit: '4Gi'
-        storage:
-          data:
-            capacity: '1Gi'
   workers:
     config:
       resources:
@@ -172,9 +140,6 @@ spec:
           max: '4000m'
         memory:
           limit: '4Gi'
-        storage:
-          data:
-            capacity: '1Gi'
 ----
 
 WARNING: The default values are _most likely_ not sufficient to run a proper cluster in production.
